--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
 
-background-color: rgb(205, 207, 209);
-display: flex;
-flex-direction: column;
-align-items: center;
+    background-color: rgb(205, 207, 209);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 
 }
 
@@ -13,18 +14,18 @@ main {
     padding: 21px;
     box-sizing: border-box;
     /* background-color: blue; */
-   
-
+    
 }
 
 .container {
 
 
-width: 100%;
-padding: 21px;
-border-radius: 7px;
-/* background-color: aqua; */
-box-sizing: border-box;
+    width: 100%;
+    padding: 21px;
+    border-radius: 7px;
+    /* background-color: aqua; */
+    box-sizing: border-box;
+
 
 
 
@@ -33,9 +34,10 @@ box-sizing: border-box;
 
 .row {
 
-display: flex;
-justify-content: space-between;
-gap: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 15px;
 
 
 }
@@ -49,5 +51,27 @@ gap: 10px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    
+
+}
+
+.row-2 .child2 {
+
+    width: 48%;
+    background-color: #fff;
+    padding: 16px;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+}
+
+.row .child3 {
+    width: 100%;
+    background-color: #fff;
+    padding: 16px;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
