--- a/style.css
+++ b/style.css
@@ -76,3 +76,24 @@ h3 {
     
     text-align: center;
 }
+
+@media (max-width: 768px) {
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .row-1 .child,
+    .row-2 .child2,
+    .row .child3 {
+
+        width: 100%;
+    }
+
+    main {
+        
+        width: 95%;
+        padding: 10px;
+    }
+}
